--- a/public/shop.html
+++ b/public/shop.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <title>
-    Pup&Purr website
+    Pup&Purr
   </title>
 
   <!-- slider stylesheet -->
