--- a/public/shop.html
+++ b/public/shop.html
@@ -35,7 +35,7 @@
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
-          <span>
+          <span style="color: #426b1f;">
             Pup&Purr
           </span>
         </a>
