Further colour changes
Reversed some of the colour changes previously made due to aesthetic reasons - and changed the colour of the nav bar and text within the nav bar, as well as colour updates to the contact page boxes

--- a/public/index.html
+++ b/public/index.html
@@ -389,7 +389,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              NEED HELP?
             </h6>
             <p>
               We are here for you! Contact our friendly support team anytime for assistance with your orders or questions about our pet products.🐾            </p>
