--- a/public/why.html
+++ b/public/why.html
@@ -31,13 +31,14 @@
 
 <body>
   <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
+    <!-- header section starts -->
+    <header class="header_section" style="background-color: #fefbe6;">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span style="color: #426b1f;">
             Pup&Purr
           </span>
+          <img src="images/logo.jpg" alt="Logo" style="height: 60px; margin-right: 10px;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span>
@@ -108,7 +109,7 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="box ">
+          <div class="box" style="background-color: #CFDCC0;">
             <div class="img-box">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                 <g>
@@ -207,7 +208,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="box ">
+          <div class="box" style="background-color: #CFDCC0;">
             <div class="img-box">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 490.667 490.667" style="enable-background:new 0 0 490.667 490.667;" xml:space="preserve">
                 <g>
@@ -322,7 +323,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="box ">
+          <div class="box" style="background-color: #CFDCC0;">
             <div class="img-box">
               <svg id="_30_Premium" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg" data-name="30_Premium">
                 <g id="filled">
@@ -470,7 +471,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              NEED HELP?
             </h6>
             <p>
               We are here for you! Contact our friendly support team anytime for assistance with your orders or questions about our pet products.🐾            </p>
