--- a/public/contact.html
+++ b/public/contact.html
@@ -32,19 +32,20 @@
 <body>
   <div class="hero_area">
     <!-- header section strats -->
-    <header class="header_section">
-      <nav class="navbar navbar-expand-lg custom_nav-container ">
+    <header class="header_section" style="background-color: #fefbe6;">
+      <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span style="color: #426b1f;">
             Pup&Purr
           </span>
+          <img src="images/logo.jpg" alt="Logo" style="height: 60px; margin-right: 10px;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span>
         </button>
 
-        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
-          <ul class="navbar-nav  ">
+        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #fefbe6;">
+          <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -88,7 +89,7 @@
 
   <!-- contact section -->
 
-  <section class="contact_section layout_padding">
+  <section class="contact_section layout_padding" style="background-color: #ffffff;">
     <div class="container px-0">
       <div class="heading_container ">
         <h2 class="">
@@ -176,7 +177,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              NEED HELP?
             </h6>
             <p>
               We are here for you! Contact our friendly support team anytime for assistance with your orders or questions about our pet products.🐾            </p>
