--- a/public/shop.html
+++ b/public/shop.html
@@ -32,7 +32,7 @@
 <body>
   <div class="hero_area">
     <!-- header section strats -->
-    <header class="header_section">
+    <header class="header_section" style="background-color: #fefbe6;">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span style="color: #426b1f;">
@@ -353,7 +353,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              NEED HELP?
             </h6>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
