--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span style="color: #426b1f;">
-            Pup&Purr
+            Pup&Purr 
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,11 +48,20 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shop.html">
-                Shop
-              </a>
+
+            
+            // code to be edited
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="shop.html" id="shopDropdown" role="button">Shop</a>
+              <div class="dropdown-menu" aria-labelledby="shopDropdown">
+                <a class="dropdown-item" href="food1.html">Food Item 1</a>
+                <a class="dropdown-item" href="food2.html">Food Item 2</a>
+                <a class="dropdown-item" href="food3.html">Food Item 3</a>
+                <a class="dropdown-item" href="food4.html">Food Item 4</a>
+              </div>
             </li>
+
+
             <li class="nav-item">
               <a class="nav-link" href="why.html">
                 About Us
@@ -137,6 +146,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
+
 
               </div>
               <div class="detail-box">
