--- a/public/contact.html
+++ b/public/contact.html
@@ -44,7 +44,7 @@
           <span class=""></span>
         </button>
 
-        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #fefbe6;">
+        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #CFDCC0;">
           <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -89,7 +89,7 @@
 
   <!-- contact section -->
 
-  <section class="contact_section layout_padding" style="background-color: #ffffff;">
+  <section class="contact_section layout_padding">
     <div class="container px-0">
       <div class="heading_container ">
         <h2 class="">
