--- a/public/why.html
+++ b/public/why.html
@@ -45,7 +45,7 @@
         </button>
 
         <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
-          <ul class="navbar-nav  ">
+          <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -362,7 +362,7 @@
       <div id="customCarousel2" class="carousel  carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="box">
+            <div class="box" style="background-color: #ffffff;">
               <div class="client_info">
                 <div class="client_name">
                   <h5>
@@ -379,7 +379,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="box">
+            <div class="box" style="background-color: #ffffff;">
               <div class="client_info">
                 <div class="client_name">
                   <h5>
@@ -396,7 +396,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="box">
+            <div class="box" style="background-color: #ffffff;">
               <div class="client_info">
                 <div class="client_name">
                   <h5>
