--- a/public/why.html
+++ b/public/why.html
@@ -65,7 +65,7 @@
             </li>
           </ul>
           <div class="user_option">
-            <a href="">
+            <a href="login.html">
               <i class="fa fa-user" aria-hidden="true"></i>
               <span>
                 Login
