--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 
   <title>
     Pup&Purr website
@@ -69,7 +69,7 @@
                 Login
               </span>
             </a>
-            <a href="">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -99,7 +99,7 @@
                       </h1>
                       <p> 
                         Your pets deserve the very best, and we’re here to deliver! Explore our wide range of stylish pet clothing, delicious treats, and essential supplies for cats and dogs. Whether you’re pampering your furry companion or stocking up on the basics, we’ve got everything you need to keep them happy, healthy, and looking their best.                      </p>
-                      <a href="">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </div>
@@ -350,16 +350,16 @@
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
-        <a href="">
+        <a href="https://facebook.com">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://x.com">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://instagram.com">
           <i class="fa fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://youtube.com/">
           <i class="fa fa-youtube" aria-hidden="true"></i>
         </a>
       </div>
