--- a/public/why.html
+++ b/public/why.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
   
   <title>
     Pup&Purr
@@ -71,7 +71,7 @@
                 Login
               </span>
             </a>
-            <a href="">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -89,10 +89,11 @@
   <!-- end hero area -->
 
  <!-- about us section -->
-<section class="about_us_section layout_padding">
+<section class="about_us_section layout_padding" style="padding-top: 50px">
   <div class="container">
     <div class="heading_container heading_center">
       <h2>About Us</h2>
+      <p style="padding-top: 25px"> Hi, this is the about us section </p>
     </div>
   </div>
 </section>
@@ -100,14 +101,14 @@
 
   <!-- why section -->
 
-  <section class="why_section layout_padding">
+  <section class="why_section layout_padding" style="padding-top: 20px">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
           Why Shop With Us
         </h2>
       </div>
-      <div class="row">
+      <div class="row" style="padding-top: 20px;">
         <div class="col-md-4">
           <div class="box" style="background-color: #CFDCC0;">
             <div class="img-box">
@@ -349,8 +350,8 @@
 
   <!-- end why section -->
 
-  <!-- client section -->
-  <section class="client_section layout_padding">
+  <!-- client review section -->
+  <section class="client_section layout_padding" style="padding-top: 10px;">
     
       <div class="heading_container heading_center">
         <h2>
@@ -358,7 +359,7 @@
         </h2>
       </div>
     
-    <div class="container px-0">
+    <div class="container px-0" style="padding-top: 20px;">
       <div id="customCarousel2" class="carousel  carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -426,22 +427,22 @@
       </div>
     </div>
   </section>
-  <!-- end client section -->
+  <!-- end client review section -->
 
   <!-- info section -->
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
-        <a href="">
+        <a href="https://facebook.com">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://x.com">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://instagram.com">
           <i class="fa fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://youtube.com/">
           <i class="fa fa-youtube" aria-hidden="true"></i>
         </a>
       </div>
