--- a/public/contact.html
+++ b/public/contact.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 
   <title>
     Pup&Purr
@@ -70,7 +70,7 @@
                 Login
               </span>
             </a>
-            <a href="">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -89,7 +89,7 @@
 
   <!-- contact section -->
 
-  <section class="contact_section layout_padding">
+  <section class="contact_section layout_padding" style="padding-top: 50px">
     <div class="container px-0">
       <div class="heading_container ">
         <h2 class="">
@@ -109,16 +109,16 @@
         <div class="col-md-6 col-lg-5 px-0">
           <form action="#">
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Name" style="background-color: #f9f7eb;"/>
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email" style="background-color: #f9f7eb;"/>
             </div>
             <div>
-              <input type="text" placeholder="Phone" />
+              <input type="text" placeholder="Phone" style="background-color: #f9f7eb;"/>
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Message" style="background-color: #f9f7eb;"/>
             </div>
             <div class="d-flex ">
               <button>
@@ -138,16 +138,16 @@
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
-        <a href="">
+        <a href="https://facebook.com">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://x.com">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://instagram.com">
           <i class="fa fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://youtube.com/">
           <i class="fa fa-youtube" aria-hidden="true"></i>
         </a>
       </div>
