--- a/public/shop.html
+++ b/public/shop.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 
   <title>
     Pup&Purr
@@ -70,7 +70,7 @@
                 Login
               </span>
             </a>
-            <a href="">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -89,7 +89,7 @@
 
   <!-- shop section -->
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="padding-top: 50px">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -313,16 +313,16 @@
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
-        <a href="">
+        <a href="https://facebook.com">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://x.com">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://instagram.com">
           <i class="fa fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://youtube.com/">
           <i class="fa fa-youtube" aria-hidden="true"></i>
         </a>
       </div>
