--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
+
     <title>Log In</title>
 </head>
 <body>
