--- a/public/why.html
+++ b/public/why.html
@@ -33,7 +33,7 @@
   <div class="hero_area">
     <!-- header section starts -->
     <header class="header_section" style="background-color: #fefbe6;">
-      <nav class="navbar navbar-expand-lg custom_nav-container ">
+      <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span style="color: #426b1f;">
             Pup&Purr
@@ -44,7 +44,7 @@
           <span class=""></span>
         </button>
 
-        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #CFDCC0;">
           <ul class="navbar-nav">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
