Edits to Home page
Connected to Shop page and added a new image

--- a/public/index.html
+++ b/public/index.html
@@ -48,19 +48,13 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-
             
-            // code to be edited
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="shop.html" id="shopDropdown" role="button">Shop</a>
-              <div class="dropdown-menu" aria-labelledby="shopDropdown">
-                <a class="dropdown-item" href="food1.html">Food Item 1</a>
-                <a class="dropdown-item" href="food2.html">Food Item 2</a>
-                <a class="dropdown-item" href="food3.html">Food Item 3</a>
-                <a class="dropdown-item" href="food4.html">Food Item 4</a>
-              </div>
-            </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="shop.html">
+                shop
+              </a>
+            </li>
 
             <li class="nav-item">
               <a class="nav-link" href="why.html">
@@ -147,8 +141,8 @@
             <a href="">
               <div class="img-box">
 
-
-              </div>
+              <img src = "images/ring_img.jpg" alt="ring" style="width: 100%; height: auto;"></src>
+            </div> 
               <div class="detail-box">
                 <h6>
                   Ring
@@ -344,13 +338,25 @@
           </div>
         </div>
       </div>
-      <div class="btn-box">
-        <a href="">
-          View All Products
-        </a>
-      </div>
+
+      
+<!-- banner -->
+<section>
+  <div class="banner">
+    <img class="banner-img"
+      src="images/dog_img.JPG"
+      alt ="banner for dog">
+    <div class="banner-content">
+      <h4>Products for your pets you cant resist</h4>
+      <a id="shop-now" href="shop.html">SHOP NOW</a>
     </div>
-  </section>
+  </div>
+   </div>
+</section>
+
+
+
+
 
   <!-- end shop section -->
 
