--- a/public/login.html
+++ b/public/login.html
@@ -1,199 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Pup & Purr</title>
-  
-  <!-- Include Bootstrap and Custom Styles -->
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
-  <style>
-    /* Login Page Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="pet shop, login, Pup&Purr" />
+  <meta name="description" content="Login to Pup&Purr to access your account and shop for your pets." />
+  <meta name="author" content="Pup&Purr" />
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #faf8f2; /* Light cream background */
-    }
+  <title>Login - Pup&Purr</title>
 
-    .login-container {
-      width: 100%;
-      max-width: 400px;
-      background-color: #fefbe6;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    .logo {
-      font-size: 1.5rem;
-      color: #7b8e4e; /* Olive green color for logo */
-      margin-bottom: 1rem;
-    }
-
-    h2 {
-      font-size: 1.8rem;
-      color: #333;
-      margin-bottom: 1rem;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    input[type="email"],
-    input[type="password"] {
-      width: 100%;
-      padding: 0.8rem;
-      font-size: 1rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-
-    input[type="email"]:focus,
-    input[type="password"]:focus {
-      border-color: #7b8e4e; /* Matching olive green */
-      outline: none;
-    }
-
-    .login-btn {
-      background-color: #7b8e4e;
-      color: #fff;
-      font-size: 1rem;
-      padding: 0.8rem;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .login-btn:hover {
-      background-color: #426b1f;
-    }
-
-    .forgot-password {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    .forgot-password a {
-      color: #7b8e4e;
-      text-decoration: none;
-    }
-
-    .forgot-password a:hover {
-      text-decoration: underline;
-    }
-
-    .logo img {
-      height: 50px; /* Original logo size */
-      transform: scale(1.5); /* Scale up the logo without increasing navbar size */
-      transform-origin: center; /* Keep it centered */
-    }
-  </style>
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- Responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
+  <div class="hero_area">
+    <!-- Header Section Starts -->
+    <header class="header_section">
+      <nav class="navbar navbar-expand-lg custom_nav-container">
+        <a class="navbar-brand" href="index.html">
+          <span style="color: #426b1f;">Pup&Purr</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class=""></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="shop.html">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="why.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Get in Touch</a>
+            </li>
+          </ul>
+          <div class="user_option">
+            <a href="login.html">
+              <i class="fa fa-user" aria-hidden="true"></i>
+              <span>Login</span>
+            </a>
+            <a href="basket.html">
+              <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+            </a>
+            <form class="form-inline">
+              <button class="btn nav_search-btn" type="submit">
+                <i class="fa fa-search" aria-hidden="true"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- End Header Section -->
 
-  <!-- Header & Navbar -->
-  <header class="header_section">
-    <nav class="navbar navbar-expand-lg custom_nav-container ">
-      <a class="navbar-brand" href="index.html">
-        <span style="color: #426b1f;">Pup & Purr</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class=""></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
-          <li class="nav-item"><a class="nav-link" href="why.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Get in Touch</a></li>
-        </ul>
-        <div class="user_option">
-          <a href="login.html"><i class="fa fa-user" aria-hidden="true"></i> Login</a>
-          <a href="basket.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
-          <form class="form-inline">
-            <button class="btn nav_search-btn" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-          </form>
+    <!-- Login Form Section -->
+    <section class="layout_padding">
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>Login to Your Account</h2>
+          <p>Access your account to explore our pet essentials and manage your orders.</p>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="form_container">
+              <form action="/login" method="POST">
+                <div class="form-group">
+                  <input type="email" class="form-control" name="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" name="password" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn btn-success btn-block">Login</button>
+              </form>
+              <div class="text-center mt-3">
+                <p>Don't have an account? <a href="signup.html" style="color: #7b8e4e;">Sign up here</a>.</p>
+                <p><a href="reset-password.html" style="color: #7b8e4e;">Forgot your password?</a></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  </header>
+    </section>
+    <!-- End Login Form Section -->
 
-  <!-- Login Form Section -->
-  <div class="login-container">
-    <div class="logo">
-      <!-- Logo and branding text here -->
-      <!-- <strong>Pup & Purr</strong> -->
-      <div class="logo">
-        <img src="logo.png" alt="Pup & Purr Logo">
+    <!-- Footer Section -->
+    <footer class="footer_section">
+      <div class="container">
+        <p>&copy; <span id="displayYear"></span> All Rights Reserved by <a href="index.html">Pup&Purr</a></p>
       </div>
-    </div>
-    <h2>Login to Your Account</h2>
-    <form action="/login" method="post">
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit" class="login-btn">Login</button>
-    </form>
-    <div class="forgot-password">
-      <p>Forgot your password? <a href="/reset-password">Reset it here</a>.</p>
-    </div>
+    </footer>
+    <!-- End Footer Section -->
   </div>
 
-  <!-- Footer Section -->
-  <footer class="footer_section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-3">
-          <h6>ABOUT US</h6>
-          <p>We specialize in premium pet essentials for cats and dogs. 🐾</p>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <h5>Newsletter</h5>
-          <form>
-            <input type="email" placeholder="Enter your email">
-            <button>Subscribe</button>
-          </form>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <h6>NEED HELP?</h6>
-          <p>Contact us for assistance anytime! 🐶🐱</p>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <h6>CONTACT US</h6>
-          <p>
-            <i class="fa fa-map-marker"></i> 64 Aston Road Birmingham, UK <br>
-            <i class="fa fa-phone"></i> +44 (0)121 204 3001 <br>
-            <i class="fa fa-envelope"></i> contact@pupandpurr.com
-          </p>
-        </div>
-      </div>
-      <p>&copy; <span id="displayYear"></span> Pup & Purr. All Rights Reserved.</p>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS -->
+  <!-- Scripts -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/custom.js"></script>
-
 </body>
+
 </html>
+
