--- a/public/shop.html
+++ b/public/shop.html
@@ -73,7 +73,7 @@
                 Login
               </span>
             </a>
-            <a href="basket.html">
+            <a href="basket.php">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
