--- a/public/why.html
+++ b/public/why.html
@@ -71,7 +71,7 @@
                 Login
               </span>
             </a>
-            <a href="basket.html">
+            <a href="basket.php">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -320,7 +320,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                Free Shiping
+                Free Shipping
               </h5>
               <p>
                 Enjoy free shipping on all orders over £30.
