--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: #CFDCC0;">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
@@ -71,11 +71,13 @@
     <!-- End Header Section -->
 
     <!-- Login Form Section -->
-    <section class="layout_padding">
+    <section class="layout_padding" style="padding-top: 48px">
       <div class="container">
         <div class="heading_container heading_center">
           <h2>Login to Your Account</h2>
+          <p></p>
           <p>Access your account to explore our pet essentials and manage your orders.</p>
+          <p></p>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
@@ -87,10 +89,10 @@
                 <div class="form-group">
                   <input type="password" class="form-control" name="password" placeholder="Password" required>
                 </div>
-                <button type="submit" class="btn btn-success btn-block">Login</button>
+                <button type="submit" class="btn btn-success btn-block" style="background-color: #426b1f;">Login</button>
               </form>
               <div class="text-center mt-3">
-                <p>Don't have an account? <a href="signup.html" style="color: #7b8e4e;">Sign up here</a>.</p>
+                <p>Don't have an account? <a href="signup.html" style="color: #7b8e4e;">Sign up here.</a></p>
                 <p><a href="reset-password.html" style="color: #7b8e4e;">Forgot your password?</a></p>
               </div>
             </div>
@@ -100,14 +102,92 @@
     </section>
     <!-- End Login Form Section -->
 
-    <!-- Footer Section -->
-    <footer class="footer_section">
+  <!-- info section -->
+
+  <section class="info_section  layout_padding2-top">
+    <div class="social_container">
+      <div class="social_box">
+        <a href="https://facebook.com">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://x.com">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://instagram.com">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="https://youtube.com/">
+          <i class="fa fa-youtube" aria-hidden="true"></i>
+        </a>
+      </div>
+    </div>
+    <div class="info_container ">
       <div class="container">
-        <p>&copy; <span id="displayYear"></span> All Rights Reserved by <a href="index.html">Pup&Purr</a></p>
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <h6>
+              ABOUT US
+            </h6>
+            <p>
+              We specialize in premium pet essentials, including stylish clothes, tasty treats, and everyday supplies for cats and dogs. Because they’re not just pets—they’re family. ❤️            </p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="info_form ">
+              <h5>
+                Newsletter
+              </h5>
+              <form action="#">
+                <input type="email" placeholder="Enter your email">
+                <button>
+                  Subscribe
+                </button>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <h6>
+              NEED HELP?
+            </h6>
+            <p>
+              We are here for you! Contact our friendly support team anytime for assistance with your orders or questions about our pet products.🐾            </p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <h6>
+              CONTACT US
+            </h6>
+            <div class="info_link-box">
+              <a href="">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <span> 64 Aston Road Birmingham UK </span>
+              </a>
+              <a href="">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>+44 (0)121 204 3001</span>
+              </a>
+              <a href="">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <span> contact@pup&purr.com</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- footer section -->
+    <footer class=" footer_section">
+      <div class="container">
+        <p>
+          &copy; <span id="displayYear"></span> All Rights Reserved By
+          <a href="https://html.design/">Pup&Purr</a>
+        </p>
       </div>
     </footer>
-    <!-- End Footer Section -->
-  </div>
+    <!-- footer section -->
+
+  </section>
+
+
+  <!-- end info section -->
 
   <!-- Scripts -->
   <script src="js/jquery-3.4.1.min.js"></script>
