change in food option

--- a/public/p1.html
+++ b/public/p1.html
@@ -127,10 +127,10 @@
             <div class="form-group">
               <label for="flavor">Flavor:</label>
               <select id="flavor" name="flavor" class="form-control">
-                <option value="chicken">Chicken</option>
-                <option value="beef">Beef</option>
-                <option value="lamb">Lamb</option>
-                <option value="salmon">Salmon</option>
+                <option value="chicken">chocolate</option>
+                <option value="beef">vanilla</option>
+                <option value="lamb">strawberry</option>
+                <option value="salmon">coconut</option>
               </select>
             </div>
           </div>
