--- a/public/login.html
+++ b/public/login.html
@@ -102,92 +102,14 @@
     </section>
     <!-- End Login Form Section -->
 
-  <!-- info section -->
-
-  <section class="info_section  layout_padding2-top">
-    <div class="social_container">
-      <div class="social_box">
-        <a href="https://facebook.com">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://x.com">
-          <i class="fa fa-twitter" aria-hidden="true"></i>
-        </a>
-        <a href="https://instagram.com">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-        <a href="https://youtube.com/">
-          <i class="fa fa-youtube" aria-hidden="true"></i>
-        </a>
-      </div>
-    </div>
-    <div class="info_container ">
+    <!-- Footer Section -->
+    <footer class="footer_section">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              ABOUT US
-            </h6>
-            <p>
-              We specialize in premium pet essentials, including stylish clothes, tasty treats, and everyday supplies for cats and dogs. Because they’re not just pets—they’re family. ❤️            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_form ">
-              <h5>
-                Newsletter
-              </h5>
-              <form action="#">
-                <input type="email" placeholder="Enter your email">
-                <button>
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              NEED HELP?
-            </h6>
-            <p>
-              We are here for you! Contact our friendly support team anytime for assistance with your orders or questions about our pet products.🐾            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              CONTACT US
-            </h6>
-            <div class="info_link-box">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span> 64 Aston Road Birmingham UK </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>+44 (0)121 204 3001</span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> contact@pup&purr.com</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- footer section -->
-    <footer class=" footer_section">
-      <div class="container">
-        <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Pup&Purr</a>
-        </p>
+        <p>&copy; <span id="displayYear"></span> All Rights Reserved by <a href="index.html" style="color:#426b1f">Pup&Purr</a></p>
       </div>
     </footer>
-    <!-- footer section -->
-
-  </section>
-
-
-  <!-- end info section -->
+    <!-- End Footer Section -->
+  </div>
 
   <!-- Scripts -->
   <script src="js/jquery-3.4.1.min.js"></script>
