--- a/public/signUp.html
+++ b/public/signUp.html
@@ -110,7 +110,7 @@
     <!-- Footer Section -->
     <footer class="footer_section">
       <div class="container">
-        <p>&copy; <span id="displayYear"></span> All Rights Reserved by <a href="index.html">Pup&Purr</a></p>
+        <p>&copy; <span id="displayYear"></span> All Rights Reserved by <a href="index.html" style="color:#426b1f">Pup&Purr</a></p>
       </div>
     </footer>
     <!-- End Footer Section -->
