--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
             <a href="p1.html">
               <div class="img-box">
 
-              <img src = "images/ring_img.jpg" alt="ring" style="width: 100%; height: auto;"></src>
+              <img src = "images/p1.jpg" alt="ring" style="width: 100%; height: auto;"></src>
             </div> 
               <div class="detail-box">
                 <h6>
