--- a/public/p1.html
+++ b/public/p1.html
@@ -95,7 +95,7 @@
     <div class="row">
       <!-- Product Image -->
       <div class="col-md-6">
-        <img src="images/ring_img.jpg" class="product-image w-100" alt="Bundle Dog Food">
+        <img src="images/p1.jpg" class="product-image w-100" alt="Bundle Dog Food">
       </div>
 
       <!-- Product Details -->
