--- a/public/shop.html
+++ b/public/shop.html
@@ -120,7 +120,7 @@
                 
                 <a href="">
 
-              <img src = "images/ring_img.jpg" alt="ring" style="width: 100%; height: auto;"></src>
+              <img src = "images/p1.jpg" alt="ring" style="width: 100%; height: auto;"></src>
             </div> 
               <div class="detail-box">
                 <h6>
