--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p2.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -199,7 +199,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p3.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -224,7 +224,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p4.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -249,7 +249,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p5.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -274,7 +274,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p6.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -362,10 +362,10 @@
     </h4>
     <a id="shop-now" href="shop.html">buy now</a>
   </div>
-  </div>\
+  </div>
 </section>
 
-//edit
+
  <!-- Testimonial Section -->
 <section class="testimonial_section">
   
@@ -413,7 +413,7 @@
 </section>
 <!-- Include Swiper JS and CSS -->
 
-//edit
+
 <link
   rel="stylesheet"
   href="https://unpkg.com/swiper/swiper-bundle.min.css"
