section split and new img

--- a/public/index.html
+++ b/public/index.html
@@ -299,7 +299,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p7.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -365,7 +365,7 @@
   </div>
 </section>
 
-
+<section> </section>
  <!-- Testimonial Section -->
 <section class="testimonial_section">
   
