--- a/public/index.html
+++ b/public/index.html
@@ -324,7 +324,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-              
+                <img src="images/p8.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
