--- a/public/shop1.html
+++ b/public/shop1.html
@@ -312,7 +312,7 @@
               </div>
             </a>
           </div>
-        
+        </div>
       </div>
 
       <div class="row">
@@ -325,7 +325,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                bundle- dogfood
+                dog toys
                 </h6>
                 <h6>
                   Price
@@ -350,7 +350,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  bundle- catfood
+                  cat toys
                 </h6>
                 <h6>
                   Price
@@ -375,7 +375,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog biscuits
+                  dog shampoo
                 </h6>
                 <h6>
                   Price
@@ -400,7 +400,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat biscuits
+                  cat shampoo
                 </h6>
                 <h6>
                   Price
@@ -425,7 +425,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  protein dog food 
+                 dog collar 
                 </h6>
                 <h6>
                   Price
@@ -450,7 +450,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed dog food
+                  dog dental products
                 </h6>
                 <h6>
                   Price
@@ -475,7 +475,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed cat food
+                  cat dental products
                 </h6>
                 <h6>
                   Price
@@ -500,7 +500,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat protein food
+                  cat bed
                 </h6>
                 <h6>
                   Price
