--- a/public/shop1.html
+++ b/public/shop1.html
@@ -321,7 +321,7 @@
             <a href="">
               <div class="img-box">
 
-              <img src = "images/ring_img.jpg" alt="ring" style="width: 100%; height: auto;"></src>
+                <img src="images/p9.jpg" alt="p2" style="width: 100%; height: auto;"></src>
             </div> 
               <div class="detail-box">
                 <h6>
@@ -346,7 +346,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p10.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -371,7 +371,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p11.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -396,7 +396,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p12.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -421,11 +421,11 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p13.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                 dog collar 
+                 dog bed 
                 </h6>
                 <h6>
                   Price
@@ -446,7 +446,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p16.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -471,7 +471,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-
+                <img src="images/p15.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -496,7 +496,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-              
+                <img src="images/p14.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
