--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p2.html">
               <div class="img-box">
                 <img src="images/p2.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
