--- a/public/dog.html
+++ b/public/dog.html
@@ -114,10 +114,10 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p1.html">
               <div class="img-box">
 
-              <img src = "images/ring_img.jpg" alt="ring" style="width: 100%; height: auto;"></src>
+              <img src = "images/p1.jpg" alt="ring" style="width: 100%; height: auto;"></src>
             </div> 
               <div class="detail-box">
                 <h6>
@@ -136,17 +136,18 @@
                 </span>
               </div>
             </a>
+          </a>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p3.html">
               <div class="img-box">
-
+                <img src="images/p3.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                  bundle- catfood
+                  dog biscuits
                 </h6>
                 <h6>
                   Price
@@ -165,13 +166,13 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p5.html">
               <div class="img-box">
-
+                <img src="images/p5.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                  dog biscuits
+                  protein dog food
                 </h6>
                 <h6>
                   Price
@@ -190,9 +191,9 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p6.html">
               <div class="img-box">
-
+                <img src="images/p6.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
@@ -215,13 +216,13 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p9.html">
               <div class="img-box">
-
+                <img src="images/p9.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                  protein dog food 
+                  dog toys 
                 </h6>
                 <h6>
                   Price
@@ -240,13 +241,13 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p11.html">
               <div class="img-box">
-
+                <img src="images/p11.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed dog food
+                 dog shampoo
                 </h6>
                 <h6>
                   Price
@@ -265,13 +266,13 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p13.html">
               <div class="img-box">
-
+                <img src="images/p13.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed cat food
+                 dog bed
                 </h6>
                 <h6>
                   Price
@@ -290,13 +291,13 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p16.html">
               <div class="img-box">
-              
+                <img src="images/p16.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
               <div class="detail-box">
                 <h6>
-                  cat protein food
+                 dog dental products
                 </h6>
                 <h6>
                   Price
@@ -314,6 +315,8 @@
           </div>
         </div>
       </div>
+
+      
       <div class="btn-box">
         <a href="shop.html">
           return to products main page 
