--- a/public/p16.html
+++ b/public/p16.html
@@ -115,15 +115,24 @@
 
             <!-- Package Size -->
             <div class="form-group">
-              <label for="size">Size of bed:</label>
+              <label for="size">Package Size:</label>
               <select id="size" name="size" class="form-control">
-                <option value="small">Small</option>
-                <option value="medium">Medium</option>
-                <option value="large">Large</option>
+                <option value="small">Small (2kg)</option>
+                <option value="medium">Medium (5kg)</option>
+                <option value="large">Large (10kg)</option>
               </select>
             </div>
 
-          
+            <!-- Food Flavor -->
+            <div class="form-group">
+              <label for="flavor">Flavor:</label>
+              <select id="flavor" name="flavor" class="form-control">
+                <option value="chicken">mint</option>
+                <option value="beef">spearmint</option>
+             
+              </select>
+            </div>
+          </div>
 
           <!-- Add to Cart Button -->
           <button class="btn btn-dark btn-block mt-4">Add to Cart</button>
