--- a/public/basket.html
+++ b/public/basket.html
@@ -56,6 +56,16 @@
             font-weight: bold;
         }
 
+        .navbar-icons {
+            display: flex;
+            gap: 15px;
+        }
+
+        .navbar-icons a {
+            color: #426b1f;
+            font-size: 18px;
+        }
+
 </head>
 <body>
 
