--- a/public/basket.html
+++ b/public/basket.html
@@ -66,6 +66,16 @@
             font-size: 18px;
         }
 
+        /*The  Basket Page */
+        .basket-container {
+            margin: 0 auto;
+            max-width: 1200px;
+            padding: 50px 20px;
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+        }
+
 </head>
 <body>
 
