--- a/public/basket.html
+++ b/public/basket.html
@@ -76,6 +76,28 @@
             gap: 20px;
         }
 
+        .basket-items,
+        .order-summary {
+            padding: 20px;
+            background: #fefefe;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(123, 142, 78, 0.2);
+        }
+
+        .basket-items {
+            flex: 2;
+        }
+
+        .order-summary {
+            flex: 1;
+        }
+
+        .basket-title {
+            font-size: 28px;
+            color: #426b1f;
+            margin-bottom: 20px;
+        }
+
 </head>
 <body>
 
