--- a/public/basket.html
+++ b/public/basket.html
@@ -98,6 +98,27 @@
             margin-bottom: 20px;
         }
 
+        .item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid #ddd;
+            padding: 15px 0;
+        }
+
+        .item img {
+            width: 80px;
+            height: auto;
+            border-radius: 5px;
+        }
+
+        .item-name {
+            flex: 1;
+            margin: 0 20px;
+            font-size: 16px;
+            color: #333;
+        }
+
 </head>
 <body>
 
