--- a/public/basket.html
+++ b/public/basket.html
@@ -142,6 +142,29 @@
             color: #426b1f;
         }
 
+        .basket-button {
+            margin-top: 20px;
+            padding: 12px 20px;
+            font-size: 16px;
+            background: #426b1f;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .basket-button:hover {
+            background: #355716;
+        }
+
+        .basket-button span {
+            font-size: 18px;
+            margin-left: 10px;
+        }
+    </style>
 </head>
 <body>
 
